// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`amplify-form-section spec: Render logic -> should render a form section with a button label of \`Go\` 1`] = `
<amplify-form-section button-label="Go">
  <!---->
  <form>
    <amplify-section class="amplify-ui--form-section css-1u8jjs9">
      <div slot="amplify-section-header">
        <div class="amplify-ui--section-header css-xdkp27">
          <slot-fb name="amplify-section-header">
            <h2>
              Amplify
            </h2>
          </slot-fb>
        </div>
      </div>
      <div slot="amplify-section-body"></div>
      <div slot="amplify-section-footer">
        <div class="amplify-ui--footer-section css-1q62vzk">
          <slot-fb name="amplify-section-footer">
            <amplify-button type="submit">
              Submit
            </amplify-button>
          </slot-fb>
        </div>
      </div>
    </amplify-section>
  </form>
</amplify-form-section>
`;

exports[`amplify-form-section spec: Render logic -> should render a form section with a default button of \`Submit\` 1`] = `
<amplify-form-section>
  <!---->
  <form>
    <amplify-section class="amplify-ui--form-section css-1u8jjs9">
      <div slot="amplify-section-header">
        <div class="amplify-ui--section-header css-xdkp27">
          <slot-fb name="amplify-section-header">
            <h2>
              Amplify
            </h2>
          </slot-fb>
        </div>
      </div>
      <div slot="amplify-section-body"></div>
      <div slot="amplify-section-footer">
        <div class="amplify-ui--footer-section css-1q62vzk">
          <slot-fb name="amplify-section-footer">
            <amplify-button type="submit">
              Submit
            </amplify-button>
          </slot-fb>
        </div>
      </div>
    </amplify-section>
  </form>
</amplify-form-section>
`;

exports[`amplify-form-section spec: Render logic -> should render a form section with only a class of \`amplify-ui--form-section\` when style override is true 1`] = `
<amplify-form-section override-style="true">
  <!---->
  <form>
    <amplify-section class="amplify-ui--form-section">
      <div slot="amplify-section-header">
        <div class="amplify-ui--section-header css-xdkp27">
          <slot-fb name="amplify-section-header">
            <h2>
              Amplify
            </h2>
          </slot-fb>
        </div>
      </div>
      <div slot="amplify-section-body"></div>
      <div slot="amplify-section-footer">
        <div class="amplify-ui--footer-section css-1q62vzk">
          <slot-fb name="amplify-section-footer">
            <amplify-button type="submit">
              Submit
            </amplify-button>
          </slot-fb>
        </div>
      </div>
    </amplify-section>
  </form>
</amplify-form-section>
`;
